fix: update project name and lint script for Builder.io

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "my-builder-app",
+  "name": "doctor-pa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
